# chatbot-demo

./: README.md
backend/: .env.example  Dockerfile  README.md  compose.yaml  pyproject.toml  requirements.txt
backend/data/load/: faq_ava.csv
backend/data/vectorstore/: chroma.sqlite3
backend/src/: config.py  errors.py  main.py  retriever.py
backend/src/api/chat/: models.py  router.py  schemas.py  service.py
backend/src/api/threads/: models.py  router.py  schemas.py  service.py
backend/src/db/: mongodb_utils.py
backend/tests/: conftest.py
backend/tests/api/: data.py  test_chat.py  test_threads.py
frontend/: .env.example  README.md  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/chat/: chat-api.ts  chat-messages.tsx  chat-widget.tsx  index.ts  interface.ts
